--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,9 @@
       "react-app/jest"
     ]
   },
+  "overrides": {
+    "react-error-overlay": "6.0.9"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
